ocaml/testsuite/tests/typing-layouts-err-msg/probe.reference
File "probe.ml", line 13, characters 6-7:
13 |   let f () = x in
           ^
Warning 26 [unused-var]: unused variable f.
File "probe.ml", lines 12-15, characters 20-2:
12 | ....................[%probe "a" (
13 |   let f () = x in
14 |   ()
15 | )]
Error: Variables in probe handlers must have layout value, but x in this handler does not.
